# fastapi-example

./: .gitignore  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py  utils.py
app/fixtures/: users.json
app/routers/: __init__.py
app/routers/v1/: __init__.py
app/routers/v1/account/: __init__.py  models.py  views.py
scripts/: runserver.sh
