[tool.poetry]
name = "oop-example"
version = "0.1.0"
description = ""
authors = ["Sheikh Haris Zahid <sheikh.haris.zahid@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
